# TTinyRenderer

./: CMakeLists.txt  MyThreadPool.h  README.md  ThreadPool.h  aarch64_neon.s  arrch64_neon.s  main.cpp  math.h  mmath.h  model.h  pipeline.h  rasterizer.cpp  rasterizer.h  shader.cpp  shader.h  texture.cpp  texture.h  tinyrenderer.cpp  triangle.h
output/: TTinyRenderer
output/Release/: TTinyRenderer.lib
shader/: default_shader.h  ishader.h  texture_shader.h
src/camera/: camera_manager.h
src/object/: camera.h  eye.h  model.h  object.cpp  object.h  object_manager.cpp  object_manager.h  triangle.h
src/rasterizer/: rasterizer.cpp  rasterizer.h
src/scene/: scene.cpp  scene.h  scene_manager.h
src/shader/: africahead_shader.cpp  africahead_shader.h  default_shader.h  ishader.cpp  ishader.h  phong_shader.cpp  phong_shader.h  texture_shader.h
src/texture/: texture.cpp  texture.h  texture_manager.h
src/utils/: logger.h  mmath.h  model.h  triangle.h  utils.h
